[package]
name = "fst-extra-aut"
version = "0.1.0"
authors = ["blah"]
description = """
Search finite state transducers with fuzzy queries using Levenshtein automata.
"""
documentation = "https://docs.rs/fst-levenshtein"
homepage = "https://github.com/BurntSushi/fst"
repository = "https://github.com/BurntSushi/fst"
keywords = ["search", "information", "retrieval", "dictionary", "map"]
license = "Unlicense/MIT"
build = "build.rs"

[dependencies]
fst = { path = ".." }
cpp = "0.3.0"
#fst = "0.2.3"

[build-dependencies]
cpp_build = "0.3.0"
