[package]
name = "fst-extra-aut"
version = "0.1.0"
authors = ["blah"]
description = """
Some extra automata and tools for https://github.com/BurntSushi/fst/
 - adapters to perform approximate search for weighted, non deterministic, and epsillon containing automata
 - toy/naive Levenshtein automata
 - custom error models with HFST
"""
homepage = "https://github.com/frankier/fst-extra-aut"
repository = "https://github.com/frankier/fst-extra-aut"
keywords = ["search", "information", "retrieval", "dictionary", "map"]
license = "Unlicense/MIT"
build = "build.rs"

[dependencies]
cpp = "0.3.0"
fst = "0.2.3"

[build-dependencies]
cpp_build = "0.3.0"
